# src/api/apis/DataApi.ts
@@ -1,0 +1,47 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * amber
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+
+/**
+ * 
+ */
+export class DataApi extends runtime.BaseAPI {
+
+    /**
+     */
+    async clearAssembliesRaw(): Promise<runtime.ApiResponse<boolean>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/Data/clear-assemblies`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.TextApiResponse(response) as any;
+    }
+
+    /**
+     */
+    async clearAssemblies(): Promise<boolean> {
+        const response = await this.clearAssembliesRaw();
+        return await response.value();
+    }
+
+}
